[package]
name = "sedum"
version = "0.2.46"
edition = "2018"
license = "MPL-2.0"
description = "Sedum is a static website generator."
homepage = "https://github.com/ellygaytor/Sedum"
repository = "https://github.com/ellygaytor/Sedum"
readme = "README.md"
keywords = ["markdown"]
categories = ["web-programming"]

[dependencies]
walkdir = "2.3.2"
extract-frontmatter = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pulldown-cmark = "0.8.0"
structopt = "0.3.23"
chrono = "0.4.19"

[profile.release]
lto = "fat"
codegen-units = 1
