[package]
name = "sedum"
version = "0.2.57"
edition = "2018"
license = "MPL-2.0"
description = "Sedum is a static website generator."
homepage = "https://github.com/ellygaytor/Sedum"
repository = "https://github.com/ellygaytor/Sedum"
readme = "README.md"
keywords = ["markdown"]
categories = ["web-programming"]

[dependencies]
walkdir = "2.3.2"
extract-frontmatter = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
pulldown-cmark = "0.9.2"
clap = { version = "4.0.32", features = ["derive"] }
epoch-converter = "0.1.1"

[profile.release]
lto = "fat"
codegen-units = 1
